# ai-onboarding

./: .cursorrules  .gitignore  AGENTS.md  IntegrationPlan.md  README.md  RefactorPlan-agent1.md  RefactorPlan-agent2.md  SOLID_CONFORMANCE_ANALYSIS.md  agent-1-instructions.md  agent-2-instructions.md  demo_conversation.md  integration.md  pyproject.toml
config/: default.yaml  demo.yaml  development.yaml  journey.yaml  test.yaml
scripts/: run_demo.py
src/brief_scout/: __init__.py  main.py
src/brief_scout/application/: __init__.py
src/brief_scout/application/dto/: __init__.py  brief_dto.py  intake_dto.py
src/brief_scout/application/services/: __init__.py  brief_generation_pipeline.py  brief_markdown_renderer.py  default_research_step_registry.py  intake_data_differ.py  intake_data_extractor.py  intake_prompt_builder.py  (+6 more)
src/brief_scout/domain/: __init__.py  errors.py
src/brief_scout/infrastructure/: __init__.py
src/brief_scout/interfaces/: __init__.py
tests/: conftest.py
tests/eval/: test_brief_quality.py
tests/eval/fixtures/: reference_nike_case.yaml
tests/fixtures/: demo_journey.yaml
tests/integration/: test_api.py  test_api_source.py  test_full_pipeline.py
tests/unit/: test_brief_generation_pipeline.py  test_cached_llm.py  test_category_classifier.py  test_claude_adapter.py  test_completeness_checker.py  test_config_models.py  test_demo_journey.py  test_domain_models.py  test_fake_llm_adapter.py  test_field_type_registry_and_merger.py  test_intake_use_case.py  test_intake_use_case_source.py  test_journey.py  test_kimi_adapter.py  test_openai_adapter.py  test_prompt_builders_and_renderers.py  test_research_pipeline.py  test_research_use_case.py  test_research_use_case_source.py  test_search_tool_factory.py  test_storage_adapter_factory.py  test_storage_adapters.py  test_synthesis_use_case.py  test_synthesis_use_case_source.py  test_telemetry_adapters.py  test_token_tracking_adapter.py  test_yaml_config_adapter.py
(+110 files in other folders)
