[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brief-scout"
version = "1.0.0"
description = "CreativeOS Brief Scout — Conversational brief intake + research agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]

[project.scripts]
brief-scout = "brief_scout.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brief_scout"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH", "TID", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/brief_scout/application/dto/*.py" = ["TC001", "TC003"]
"tests/**/*.py" = ["TC002", "TC003", "TC006"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true
mypy_path = ["src"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/brief_scout"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
